# yasb-gui

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  build_app.yml  tests.yml  winget.yml
app/: main.py
app/core/: application.py  code_editor.py  config_manager.py  constants.py  errors.py  localization.py  logger.py  preferences.py  schema_fetcher.py  updater.py  widget_helpers.py  win32_types.py
app/core/editor/: code_editor.html  editor_context_menu.py
app/core/editor/monaco/vs/assets/: css.worker-HnVq6Ewq.js
app/core/locales/: de.json  en.json  pt_BR.json  ru.json
app/pages/: app_settings.py  bars.py  env_variables.py  global_settings.py  styles.py  widgets.py
app/scripts/: build.py  build_msix.py
app/ui/: controls.py  loader.py
app/xaml/: MainWindow.xaml
app/xaml/components/: AboutExpander.xaml  Common.xaml  EditorSettingsExpander.xaml  EnvVariableRow.xaml  SettingsCard.xaml  SlideAnimation.xaml  WidgetItemRow.xaml
app/xaml/dialogs/: AddWidgetDialog.xaml  EditWidgetDialog.xaml  LanguageRestartDialog.xaml  MissingConfigDialog.xaml  RenameWidgetDialog.xaml  SchemaDatabaseUpdateDialog.xaml  UnsavedChangesDialog.xaml  WebView2MissingDialog.xaml  YamlEditorDialog.xaml
app/xaml/pages/: BarsPage.xaml  GlobalSettingsPage.xaml  StylesPage.xaml  WidgetsPage.xaml
tests/: fetch_schemas.py  test_code_editor.py  test_config_manager.py  test_locales.py  test_schema_fetcher.py  test_updater.py  test_widgets.py
tests/fixtures/: minimal_config.yaml  widget_ai_chat.yaml  widget_battery.yaml  widget_clock.yaml  widget_github.yaml  widget_home.yaml  widget_media.yaml  widget_taskbar.yaml  widget_weather.yaml
