[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "YASB-GUI"
dynamic = ["version"]
description = "GUI application for YASB Reborn."
authors = [
    { name = "amnweb" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruamel.yaml==0.19.1",
    "winrt.runtime==3.2.1",
    "winrt.windows.ui==3.2.1",
    "winrt.windows.system==3.2.1",
    "winrt.windows.foundation==3.2.1",
    "winrt.windows.foundation.collections==3.2.1",
    "winrt.windows.applicationmodel==3.2.1",
    "winrt.windows.applicationmodel.datatransfer==3.2.1",
    "winrt.windows.ui.xaml.interop==3.2.1",
    "webview2.microsoft.web.webview2.core==3.2.1",
    "winui3.microsoft.ui.composition.systembackdrops==3.2.1",
    "winui3.microsoft.ui.xaml==3.2.1",
    "winui3.microsoft.ui.xaml.controls==3.2.1",
    "winui3.microsoft.ui.xaml.controls.primitives==3.2.1",
    "winui3.microsoft.ui.xaml.markup==3.2.1",
    "winui3.microsoft.ui.xaml.media==3.2.1",
    "winui3.microsoft.ui.xaml.input==3.2.1",
    "winui3.microsoft.ui.windowing==3.2.1",
    "winui3.microsoft.ui.dispatching==3.2.1",
    "winui3.microsoft.ui.xaml.media.imaging==3.2.1",
    "winui3.microsoft.ui.xaml.media.animation==3.2.1",
    "winui3.microsoft.ui.xaml.xamltypeinfo==3.2.1",
    "winui3.microsoft.ui.xaml.automation.peers==3.2.1",
    "winui3.microsoft.windows.applicationmodel.dynamicdependency.bootstrap==3.2.1",
]

[project.optional-dependencies]
build = [
    "cx-freeze==8.6.0",
]
dev = [
    "ruff>=0.15.0",
    "pytest>=9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "app/core/constants.py"
pattern = "APP_VERSION = \"(?P<version>[^\"]+)\""

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = [
    "__pycache__",
    ".github",
    ".vscode",
    "build",
    "dist",
]

[tool.ruff.lint]
ignore = [
    "F405",
    "F403",
    "E741",
]
select = [
    "I",
    "F",
]
fixable = [
    "ALL",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
